--- a/styles/style.css
+++ b/styles/style.css
@@ -16,13 +16,13 @@ li {
 }
 
 html {
-  background-color: #bb0000;
+  background-color: #00274c;
 }
 
 body {
   width: 600px;
   margin: 0 auto;
-  background-color: #666666;
+  background-color: #ffcb05;
   padding: 0 20px 20px 20px;
   border: 5px solid black;
 }
@@ -30,7 +30,7 @@ body {
 h1 {
   margin: 0;
   padding: 20px 0;
-  color: #bb0000;
+  color: #00274c;
   text-shadow: 3px 3px 1px white;
 }
 
